<resources>
    <string name="app_name">PickAnEvent</string>
    <string name="clock_icon">&#xf017;</string>
    <string name="dollar_icon">&#xf153;</string>
    <string name="map_icon">&#xf041;</string>
    <string name="loading">Retrieving data...</string>
    <string name="google_android_map_api_key">AIzaSyDcy7UoZ4LGYEBOp-8E4cJzsh1Tik9Hrro</string>
    <string name="DEFAULT_NOMBRE">Nombre</string>
    <string name="ESCRIBE_NOMBRE_EVENTO">Escribe el nombre del evento</string>
    <string name="ESCRIBE_NOMBRE_USUARIO">Escribe el nombre del usuario</string>
    <string name="EVENTO_GRATUITO_PREG">El evento será gratuito?</string>
    <string name="EVENTO_HORA_APER">Hora de apertura:</string>
    <string name="EVENTO_HORA_CIERRE">Hora del cierre:</string>
    <string name="DEFAULT_CREAR_EVENTO">Crear Evento</string>
    <string name="DEFAULT_BUSCAR_EVENTO">Buscar Evento</string>
    <string name="ERROR_PRECIO">Precio incorrecto</string>
    <string name="ERROR_DIA">Fechas incorrectas</string>
    <string name="ERROR_HORAS">Horas incorrectas</string>
    <string name="ESCRIBE_DESCRIPCION_EVENTO">Escribe la descripción de tu evento</string>
    <string name="ESCRIBE_PRECIO_EVENTO">Escribe el precio del evento</string>
    <string name="ESCRIBE_URL_ENTRADAS">En el caso que se puedan comprar online, escribe la URL de venta de entradas</string>
    <string name="ESCRIBE_LUGAR_EVENTO">Escribe el lugar del evento</string>
    <string name="ESCRIBE_DIA_EVENTO">Escribe el día del evento</string>
    <string name="ERROR">Campo vacío</string>
    <string name="ERROR_HORA">Hora incorrecta</string>
    <string name="EVENTO_NO_ENCONTRADO">Evento no encontrado</string>
    <string name="PRIMER_DIA">Primer día</string>
    <string name="ULTIMO_DIA">Último día (opcional)</string>
    <string name="DEFAULT_GUARDAR_CAMBIOS">Guardar Cambios</string>
    <string name="DEFAULT_FORMATO_FECHA">dd/mm/yyyy hh:mm</string>
    <string name="DEFAULT_FORMATO_HORA">hh:mm</string>
    <string name="DEFAULT_NOMBRE_USUARIO">Nombre del Usuario</string>
    <string name="DEFAULT_GRUPOS">Grupos</string>
    <string name="DEFAULT_EVENTOS">Eventos</string>
    <string name="DEFAULT_PROXIMOS_EVENTOS">Proximos Eventos</string>
    <string name="DEFAULT_VER_INFO_GRUPO">Ver información del grupo</string>
    <string name="DEFAULT_VER_INFO_EVENTO">Ver información del evento</string>
    <string name="DEFAULT_BUSCAR">Buscar</string>
    <string name="DEFAULT_LOGIN">Login</string>
    <string name="DEFAULT_USUARIO_LOGUEADO_PREG">Usuario conectado?</string>
    <string name="DEFAULT_INFORMACION_OTRO_USUARIO">Información otro usuario</string>
    <string name="DEFAULT_EDITAR">Editar</string>
    <string name="DEFAULT_EDITAR_EVENTO">Editar evento</string>
    <string name="DEFAULT_DESCRIPCION">Descripción</string>
    <string name="DEFAULT_INFORMACION">Información</string>
    <string name="DEFAULT_COMPRAR_ENTRADAS">Comprar Entradas!</string>
    <string name="DEFAULT_LOCALIZACION">Localización</string>
    <string name="DEFAULT_ASSISTIR">Asistir!</string>
    <string name="DEFAULT_NO_ASSISTIR">No Asistir!</string>
    <string name="DEFAULT_ASISTENCIA">Asiste al evento</string>
    <string name="DEFAULT_SEGUIR">Seguir!</string>
    <string name="DEFAULT_NO_SEGUIR">Dejar de Seguir</string>
    <string name="DEFAULT_ETIQUETAS">Etiquetas</string>
    <string name="DEFAULT_DATES_LLISTA_ESDEVENIMENT">1 i 2 de Octubre</string>
    <string name="DEFAULT_BOTON">Button</string>
    <string name="DEFAULT_SEGUNDA_LINEA">segunda linea</string>
    <string name="DEFAULT_CM">CM</string>
    <string name="DEFAULT_CREAR_USUARIO">Crear Usuario</string>
    <string name="MES_ENERO">Enero</string>
    <string name="MES_FEBRERO">Febrero</string>
    <string name="MES_MARZO">Marzo</string>
    <string name="MES_ABRIL">Abril</string>
    <string name="MES_MAYO">Mayo</string>
    <string name="MES_JUNIO">Junio</string>
    <string name="MES_JULIO">Julio</string>
    <string name="MES_AGOSTO">Agosto</string>
    <string name="MES_SETIEMBRE">Setiembre</string>
    <string name="MES_OCTUBRE">Octubre</string>
    <string name="MES_NOVIEMBRE">Noviembre</string>
    <string name="MES_DICIEMBRE">Diciembre</string>
    <string name="DEFAULT_EVENTO_CREADO">Evento creado</string>
    <string name="DEFAULT_CREAR_GRUPO">Crear grupo</string>
    <string name="DEFAULT_EDITAR_GRUPO">Editar grupo</string>
    <string name="ESCRIBE_NOMBRE_GRUPO">Escribe el nombre del grupo</string>
    <string name="ESCRIBE_DESCRIPCION_GRUPO">Escribe la descripción de tu grupo</string>
    <string name="ESCRIBE_TAG_PRINCIPAL_GRUPO">Escribe el tag principal</string>
    <string name="SIGUIENDO_A">Siguiendo a </string>
    <string name="USUARIO_UNFOLLOWED">Ya no sigues al usuario</string>
    <string name="GRUPO_UNFOLLOWED">Ya no sigues al grupo</string>
    <string name="ASISTIENDO_A">Has marcado tu asistencia al evento </string>
    <string name="EVENTO_ASISTENCIA_CANCELADA">Has cancelado tu asistencia al evento</string>
    <string name="DEFAULT_COMPARTIR">Compartir!</string>
    <string name="DEFAULT_SHARE">Comparte en Twitter</string>
    <string name="LOCALIZACION">Localización</string>
    <string name="DEFAULT_USUARIOS">Usuarios</string>
    <string name="HAS_SELECCIONAT">Has seleccionado</string>
    <string name="INDICAR_NOMBRE_GRUPO">Debe indicar un nombre para el grupo</string>
    <string name="INDICAR_TAG_GRUPO">Debe indicar un tag para el grupo</string>
    <string name="ERROR_OBRIR_IMATGE">No se ha podido abrir la imagen</string>
    <string name="DEFAULT_GRUPO_CREADO">Grupo creado</string>
    <string name="DEFAULT_EDITAR_TAGS">Editar tags</string>
    <string name="ERROR_PASSWORDS_DIFERENTES">Las contraseñas no coinciden</string>
    <string name="DEFAULT_HORARIO">horario</string>
    <string name="EVENTO_EDITADO">Evento editado</string>
    <string name="GRUPO_EDITADO">Grupo editado</string>
    <string name="INDICA_TRES_TAGS">Indica un mínimo de 3 tags</string>
    <string name="LOGIN_INCORRECTO">Login incorrecto</string>
    <string name="LOGIN_CORRECTO">Login correcto </string>
    <string name="CORREO_NO_VERIFICADO">Correo no verificado </string>
    <string name="ERROR_USUARIO_YA_LOGUEADO">Desloguea el usuario actual antes de loguear con otro </string>
    <string name="ERROR_NO_LOGUEADO">No hay usuario logueado</string>
    <string name="MODO_USUARIO">Modo Usuario</string>
    <string name="MODO_CM">Modo CM</string>
    <string name="ERROR_TWITTER_LOGUEADO">Ya has logueado en twitter</string>
    <string name="EMAIL_ENVIADO">Email enviado</string>
    <string name="ERROR_SIN_AMIGOS">Sin amigos</string>


    <!-- Android created literals -->
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="DIALOG_BORRADO_CUENTA">El borrado de la cuenta es irreversible. Seguro que quieres continuar?</string>
    <string name="DEFAULT_ACEPTAR">Aceptar</string>
    <string name="DEFAULT_CANCELAR">Cancelar</string>
    <string name="DIALOG_BORRADO_CUENTA_CM">Borrar la cuenta borrará también todos los grupos y eventos creados por esta. Estos cambios son irreversibles. Estas seguro de querer continuar?</string>
    <string name="DIALOG_BORRADO_GRUPO">Borrar un grupo borrará también todos sus eventos. Estos cambios son irreversibles. Estas seguro de querer continuar?</string>
    <string name="ELIMINAR_CUENTA">Eliminar cuenta</string>
    <string name="ERROR_BORRAR">Error: no se ha podido borrar.</string>
    <string name="BORRADO_CUENTA_CORRECTO">Cuenta borrada correctamente. Serás deslogueado de la aplicación.</string>
    <string name="BORRADO_GRUPO_CORRECTO">El grupo y todos sus eventos se han borrado correctamente.</string>
    <string name="BORRADO_EVENTO_CORRECTO">El evento se ha borrado correctamente.</string>
    <string name="DIALOG_BORRADO_EVENTO">El borrado del evento es irreversible. Estas seguro de querer continuar?</string>
    <string name="ELIMINAR_GRUPO">Eliminar grupo</string>
    <string name="ELIMINAR_EVENTO">Eliminar evento</string>
    <string name="EDITAR_EVENTO">Editar evento</string>
    <string name="DEFAULT_CORREO">Correo</string>
    <string name="DEFAULT_PASSWORD">Contraseña</string>
    <string name="REPITE_PASSWORD">Repite contraseña</string>
    <string name="DEFAULT_HECHO">Hecho!</string>
    <string name="RECORDATORIO_3_TAGS">Recuerda que debes escoger un mínimo de 3 tags</string>
    <string name="RECORDATORIO_CREAR_TAGS">Si no encuentras el tag adecuado para definir tu grupo no dudes en crearlo!</string>
    <string name="ESCRIBE_EL_NOMBRE_TAG">Escribe el nombre del tag</string>
    <string name="NUEVO_TAG">nuevo tag</string>
    <string name="DEFAULT_EXAMPLE_EMAIL">example@email.com</string>
    <string name="USUARIO_DESLOGUEADO">Usuario deslogueado</string>
    <string name="CAMBIAR_FOTO">Cambiar foto</string>
    <string name="editar_preferencias">Editar preferencias</string>
    <string name="DEFAULT_EMAIL">Email:</string>
    <string name="nickname">Nickname:</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="reiniciar_contrasena">Reiniciar contraseña</string>
    <string name="DESLOGUEAR_TWITTER">Log out from Twitter</string>
    <string name="editar_tags">Editar tags</string>
    <string name="nuevo_evento">Nuevo evento</string>
    <string name="DEFAULT_CREAR">Crear</string>
    <string name="mis_amistades">Mis Amistades</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="mis_grupos">Mis Grupos</string>
    <string name="primera_linea">primera linea</string>
    <string name="nombre_grupo_repetido">Nombre de grupo ya existente</string>
    <string name="titulo_evento_repetido">Título de evento ya existente</string>
    <string name="registrarme">Registrarme</string>
    <string name="bio">Bio:</string>
    <string name="DEFAULT_NO_CUENTA">¿Todavía no tienes cuenta? ¡Regístrate!</string>
    <string name="EXAMPLE_PASS">ExamplePass123</string>
    <string name="ERROR_URL">La URL no es correcta</string>
</resources>
