<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.pes12.pickanevent.view.MainActivity"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEFAULT_VER_INFO_GRUPO"
            android:onClick="goVerInfoGrupo"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEFAULT_VER_INFO_EVENTO"
            android:onClick="goVerInfoEvento"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DEFAULT_BUSCAR"
        android:onClick="goBuscar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEFAULT_CREAR_EVENTO"
            android:onClick="goCrearEvento"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEFAULT_LOGIN"
            android:onClick="goLogin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DEFAULT_USUARIO_LOGUEADO_PREG"
            android:onClick="showUsuarioActual"/>

        <Button
            android:text="@string/DEFAULT_INFORMACION_OTRO_USUARIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="goOtroUsuario" />

        <Button
            android:text="@string/DEFAULT_EDITAR_EVENTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goEditarEvento" />

        <Button
            android:text="Crear Usuaio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goCrearUsuario" />

        <Button
            android:text="evetos usuarios que sigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goVerEventosUsuariosQueSigo" />
        <Button
            android:text="SIGN OUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goSignOut" />

        <Button
            android:text="VER INFORMACIÓN DE GRUPOS CREADOS"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVerInformacionDeGruposCreados"
            android:layout_weight="0.05"
            android:onClick="goVerGruposCreados" />

        <Button
            android:text="CAMBIAR MODO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCambiarModo"
            android:onClick="cambiarModo" />

        <Button
            android:text="Crear Grupo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buttonCrearGrupo"
            android:onClick="goCrearGrupo" />

        <Button
            android:text="Navigation Drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NavBar"
            android:onClick="goNavBar" />

        <Button
            android:text="Buscar Evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuscarEvento"
            android:onClick="goBuscarEvento" />

    </LinearLayout>
</ScrollView>
