<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ver_info_grupo"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context="com.pes12.pickanevent.view.LoginActivity"
    android:background="#bfffc2">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.pes12.pickanevent.view.LoginActivity"
            android:weightSum="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_launcher"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DEFAULT_CORREO"
                    android:textStyle="normal|bold"
                    android:textColor="#000"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:hint="@string/DEFAULT_EXAMPLE_EMAIL"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textColorHint="#8a939d"
                    android:layout_height="46dp"
                    android:background="#eceff1"
                    android:layout_marginTop="6dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DEFAULT_PASSWORD"
                    android:textStyle="normal|bold"
                    android:textColor="#000"
                    android:layout_marginTop="6dp"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:hint="ExamplePass123"
                    android:inputType = "textPassword"
                    android:textColorHint="#8a939d"
                    android:layout_height="46dp"
                    android:textSize="18sp"
                    android:background="#eceff1"
                    android:layout_marginTop="6dp"
                    />


            <Button
                android:text="@string/DEFAULT_LOGIN"
                android:onClick="login"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:radius="20dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/boton_amarillo_custom" />

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/DEFAULT_NO_CUENTA"
                android:textStyle="normal|bold"
                android:textColor="#000"
                android:layout_marginTop="100dp"
                android:textSize="18sp"/>

            <Button
                android:text="@string/registrarme"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:radius="20dip"
                android:layout_gravity="center_horizontal"
                android:id="@+id/registro"
                android:onClick="registro"
                android:layout_marginTop="10dp"
                android:background="@drawable/boton_amarillo_custom" />


        </LinearLayout>

</LinearLayout>
