<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_borrar_cm"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#bfffc2"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:gravity="center"
    tools:context="com.pes12.pickanevent.view.DialogBorrarCM"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:id="@+id/nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:text="@string/DIALOG_BORRADO_CUENTA_CM"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/borrarCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_amarillo_custom"
            android:text="@string/DEFAULT_ACEPTAR"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/funcionVacia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_amarillo_custom"
            android:text="@string/DEFAULT_CANCELAR"
            android:layout_marginStart="28dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/borrarCuenta" />
    </RelativeLayout>

</LinearLayout>
