<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context="com.pes12.pickanevent.view.CrearEventoActivity"
    android:background="#bfffc2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        ></include>

    <Button
        android:text="@string/DEFAULT_BUSCAR_EVENTO"
        android:id="@+id/buscarEvento"
        android:background="@drawable/botton_application"
        android:layout_width="150dp"
        android:layout_marginRight="10dp"
        android:layout_height="30dp"
        android:radius="20dip"
        android:onClick="buscarEvento"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/selectLugar"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="87dp"
        android:id="@+id/spinner"
        android:background="#008040"
        android:spinnerMode="dropdown"
        android:entries="@array/options_array"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/ESCRIBE_NOMBRE_EVENTO"
        android:textColorHint="#8a939d"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:layout_marginTop="28dp"
        android:id="@+id/selectEvento"
        android:background="#eceff1"
        android:textStyle="normal"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/ESCRIBE_LUGAR_EVENTO"
        android:textColorHint="#8a939d"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:id="@+id/selectLugar"
        android:background="#eceff1"
        android:textStyle="normal"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>