<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_grupo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pes12.pickanevent.view.CrearGrupoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bfffc2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/imagenGrupo"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:onClick="abrirGaleria"/>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_below="@+id/editorDescr"
                android:layout_marginTop="10dp"
                android:id="@+id/relative">

            </RelativeLayout><![CDATA[







            android:layout_marginRight="25dp" />












            ]]>

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/ESCRIBE_DESCRIPCION_GRUPO"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textColorHint="#8a939d"
                android:id="@+id/editorDescrGrupo"
                android:layout_height="184dp"
                android:background="#eceff1"
                android:textStyle="normal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:elevation="1dp"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerInParent="false"
                android:gravity="top"
                android:layout_below="@+id/editorNGrupo"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <Button
                android:text="@string/DEFAULT_CREAR_GRUPO"
                android:id="@+id/buttonAcceptar"
                android:background="@drawable/botton_application"
                android:layout_width="150dp"
                android:layout_marginRight="10dp"
                android:layout_height="30dp"
                android:radius="20dip"
                android:layout_below="@+id/editorTagPrincipal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:onClick="crearGrupo" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/marcoContenido"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:paddingTop="5dp"
                android:scrollbars="vertical"
                android:background="#fff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/imagenGrupo"
                android:layout_centerHorizontal="true"
                android:layout_height="375dp" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/ESCRIBE_NOMBRE_GRUPO"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:textColorHint="#8a939d"
                android:id="@+id/editorNGrupo"
                android:layout_height="46dp"
                android:background="#eceff1"
                android:textStyle="normal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="16dp"
                android:layout_alignTop="@+id/marcoContenido"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/ESCRIBE_TAG_PRINCIPAL_GRUPO"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:textColorHint="#8a939d"
                android:id="@+id/editorTagPrincipal"
                android:layout_height="46dp"
                android:background="#eceff1"
                android:textStyle="normal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/editorDescrGrupo"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
